; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_zend_optimizer.c_zend_optimizer_classify_function.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_zend_optimizer.c_zend_optimizer_classify_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"extract\00", align 1
@ZEND_FUNC_INDIRECT_VAR_ACCESS = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"compact\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"get_defined_vars\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"func_num_args\00", align 1
@ZEND_FUNC_VARARG = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [13 x i8] c"func_get_arg\00", align 1
@.str.5 = private unnamed_addr constant [14 x i8] c"func_get_args\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zend_optimizer_classify_function(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32*, i32** %4, align 8
  %7 = call i64 @zend_string_equals_literal(i32* %6, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @ZEND_FUNC_INDIRECT_VAR_ACCESS, align 4
  store i32 %10, i32* %3, align 4
  br label %42

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = call i64 @zend_string_equals_literal(i32* %12, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %11
  %16 = load i32, i32* @ZEND_FUNC_INDIRECT_VAR_ACCESS, align 4
  store i32 %16, i32* %3, align 4
  br label %42

17:                                               ; preds = %11
  %18 = load i32*, i32** %4, align 8
  %19 = call i64 @zend_string_equals_literal(i32* %18, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0))
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = load i32, i32* @ZEND_FUNC_INDIRECT_VAR_ACCESS, align 4
  store i32 %22, i32* %3, align 4
  br label %42

23:                                               ; preds = %17
  %24 = load i32*, i32** %4, align 8
  %25 = call i64 @zend_string_equals_literal(i32* %24, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %23
  %28 = load i32, i32* @ZEND_FUNC_VARARG, align 4
  store i32 %28, i32* %3, align 4
  br label %42

29:                                               ; preds = %23
  %30 = load i32*, i32** %4, align 8
  %31 = call i64 @zend_string_equals_literal(i32* %30, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i64 0, i64 0))
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %29
  %34 = load i32, i32* @ZEND_FUNC_VARARG, align 4
  store i32 %34, i32* %3, align 4
  br label %42

35:                                               ; preds = %29
  %36 = load i32*, i32** %4, align 8
  %37 = call i64 @zend_string_equals_literal(i32* %36, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.5, i64 0, i64 0))
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %35
  %40 = load i32, i32* @ZEND_FUNC_VARARG, align 4
  store i32 %40, i32* %3, align 4
  br label %42

41:                                               ; preds = %35
  store i32 0, i32* %3, align 4
  br label %42

42:                                               ; preds = %41, %39, %33, %27, %21, %15, %9
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i64 @zend_string_equals_literal(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
